--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.0",
+    "sweetalert2": "^11.4.17",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
